--- a/sass/layout/_interview.scss
+++ b/sass/layout/_interview.scss
@@ -203,6 +203,7 @@
               position: relative;
               z-index: 1;
               margin-bottom: -16px;
+              padding-right: 8%;
               .txt {
                 display: inline-block;
                 padding: 5px 12px 4px;
