--- a/css/style.css
+++ b/css/style.css
@@ -5547,4 +5547,78 @@ a {
 .lower-interview_l .interview .contents__list__item .link__wrap .detail .frame .img-box {
   padding-top: 9.2307692308%;
 }
+
+.lower-interview_d .l-main__mv {
+  padding-top: 140px;
+  padding-bottom: 208px;
+}
+.lower-interview_d .l-main__mv__lead .lead {
+  font-size: 3.4rem;
+  color: #fff;
+  text-align: center;
+}
+.lower-interview_d .interview .schedule__container {
+  padding-top: 40px;
+}
+.lower-interview_d .interview .schedule__slide {
+  padding: 32px 24px 32px 32px;
+  border: 5px solid #efefef;
+  border-radius: 5px;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .lower-interview_d .interview .schedule__slide {
+    padding: 24px 12px 16px 16px;
+  }
+}
+.lower-interview_d .interview .schedule__slide:not(:last-child):before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 9px 0 9px 15px;
+  position: absolute;
+  top: 50%;
+  right: -38px;
+  transform: translateY(-50%);
+}
+@media screen and (max-width: 768px) {
+  .lower-interview_d .interview .schedule__slide:not(:last-child):before {
+    right: -26px;
+    transform: scale(0.8) translateY(-50%);
+  }
+}
+.lower-interview_d .interview .schedule__slide time {
+  width: 68px;
+  padding: 6px 0;
+  font-size: 1.6rem;
+  border-radius: 1.6rem;
+  line-height: 1;
+  color: #fff;
+  display: inline-block;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 20px;
+  transform: translateY(-50%);
+}
+.lower-interview_d .interview .schedule__slide dt {
+  font-size: 1.9rem;
+  font-weight: bold;
+}
+@media screen and (max-width: 768px) {
+  .lower-interview_d .interview .schedule__slide dt {
+    font-size: 1.8rem;
+  }
+}
+.lower-interview_d .interview .schedule__slide dd {
+  font-size: 1.5rem;
+  margin-top: 12px;
+}
+@media screen and (max-width: 768px) {
+  .lower-interview_d .interview .schedule__slide dd {
+    font-size: 1.4rem;
+    margin-top: 8px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
