--- a/sass/layout/_interview.scss
+++ b/sass/layout/_interview.scss
@@ -18,7 +18,6 @@
 
     .contents {
 
-
       &__list {
         position: relative;
         z-index: 10;
@@ -295,7 +294,196 @@
 
 // 詳細
 .lower-interview_d {
-  .interview {
 
+  .l-main {
+    &__mv {
+      padding-top: 140px;
+      padding-bottom: 208px;
+      &__lead {
+        .lead {
+          font-size: 3.4rem;
+          color: #fff;
+          text-align: center;
+        }
+      }
+    }
+  }
+  .interview {
+    &__head {
+      .profile {
+        .budge {
+
+        }
+        .img-holder {
+          .img {
+            
+          }
+        }
+        .txt-holder {
+          .name-holder {
+            .name {
+              .bold {
+
+              }
+            }
+            .year {
+
+            }
+          }
+          .profile-holder {
+            .ttl {
+
+            }
+            .desc {
+
+            }
+          }
+        }
+      }
+      .features {
+        .head {
+          .ttl {
+
+          }
+          .c-blue {
+
+          }
+          .c-lightblue {
+
+          }
+        }
+        .body {
+
+        }
+
+        &__list {
+          &__item {
+            .txt {
+
+            }
+          }
+        }
+      }
+    }
+    &__body {
+      .sec__interview {
+        .head {
+
+        }
+        .body {
+          .interview {
+            &__list {
+              &__item {
+                .img-holder {
+                  .img {
+
+                  }
+                }
+                .txt-holder {
+                  .lead {
+
+                  }
+                  .desc {
+
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      .sec__question {
+        .question {
+          .head {
+
+          }
+          .body {
+
+          }
+
+          &__list {
+            &__item {
+              .question {
+
+              }
+              .answer {
+
+              }
+            }
+          }
+        }
+      }
+      .sec__oneday {
+        .oneday {
+          .head {
+
+          }
+          .body {
+
+          }
+        }
+      }
+    }
+    
+    .oneday {
+      &__container {
+          padding-top: 40px;
+      }
+      &__slide {
+          padding: 32px 24px 32px 32px;
+          border: 5px solid #efefef;
+          border-radius: 5px;
+          position: relative;
+          @include mixins.mq-down(md) {
+              padding: 24px 12px 16px 16px;
+          }
+          &:not(:last-child) {
+              &:before {
+                  content: '';
+                  width: 0;
+                  height: 0;
+                  border-style: solid;
+                  border-width: 9px 0 9px 15px;
+                  position: absolute;
+                  top: 50%;
+                  right: -38px;
+                  transform: translateY(-50%);
+                  @include mixins.mq-down(md) {
+                      right: -26px;
+                      transform: scale(0.8) translateY(-50%);
+                  }
+              }
+          }
+          time {
+              width: 68px;
+              padding: 6px 0;
+              font-size: 1.6rem;
+              border-radius: 1.6rem;
+              line-height: 1;
+              color: #fff;
+              display: inline-block;
+              text-align: center;
+              position: absolute;
+              top: 0;
+              left: 20px;
+              transform: translateY(-50%);
+          }
+          dt {
+              font-size: 1.9rem;
+              font-weight: bold;
+              @include mixins.mq-down(md) {
+                  font-size: 1.8rem;
+              }
+          }
+          dd {
+              font-size: 1.5rem;
+              margin-top: 12px;
+              @include mixins.mq-down(md) {
+                  font-size: 1.4rem;
+                  margin-top: 8px;
+              }
+          }
+      }
+    }
   }
 }
