--- a/css/style.css
+++ b/css/style.css
@@ -5557,21 +5557,67 @@ a {
   color: #fff;
   text-align: center;
 }
-.lower-interview_d .interview .schedule__container {
+.lower-interview_d .interview {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.lower-interview_d .interview__head .profile {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #fff;
+  position: relative;
+}
+.lower-interview_d .interview__head .profile .budge {
+  font-size: 1.9rem;
+  color: #fff;
+  background-color: #1c9dd2;
+  padding: 2px 24px;
+  border-radius: 4px 4px 4px 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-50%);
+}
+.lower-interview_d .interview__head .profile .img-holder {
+  flex: 0 0 52.5%;
+  max-width: 630px;
+  margin-right: 5%;
+}
+.lower-interview_d .interview__head .profile .img-holder .img {
+  position: relative;
+  z-index: 1;
+}
+.lower-interview_d .interview__head .profile .img-holder .img:before {
+  content: "";
+  display: block;
+  padding-top: 72%;
+}
+.lower-interview_d .interview__head .profile .img-holder .img img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.lower-interview_d .interview__head .profile .txt-holder {
+  flex: 1 1 auto;
+}
+.lower-interview_d .interview .oneday__container {
   padding-top: 40px;
 }
-.lower-interview_d .interview .schedule__slide {
+.lower-interview_d .interview .oneday__slide {
   padding: 32px 24px 32px 32px;
   border: 5px solid #efefef;
   border-radius: 5px;
   position: relative;
 }
 @media screen and (max-width: 768px) {
-  .lower-interview_d .interview .schedule__slide {
+  .lower-interview_d .interview .oneday__slide {
     padding: 24px 12px 16px 16px;
   }
 }
-.lower-interview_d .interview .schedule__slide:not(:last-child):before {
+.lower-interview_d .interview .oneday__slide:not(:last-child):before {
   content: "";
   width: 0;
   height: 0;
@@ -5583,12 +5629,12 @@ a {
   transform: translateY(-50%);
 }
 @media screen and (max-width: 768px) {
-  .lower-interview_d .interview .schedule__slide:not(:last-child):before {
+  .lower-interview_d .interview .oneday__slide:not(:last-child):before {
     right: -26px;
     transform: scale(0.8) translateY(-50%);
   }
 }
-.lower-interview_d .interview .schedule__slide time {
+.lower-interview_d .interview .oneday__slide time {
   width: 68px;
   padding: 6px 0;
   font-size: 1.6rem;
@@ -5602,21 +5648,21 @@ a {
   left: 20px;
   transform: translateY(-50%);
 }
-.lower-interview_d .interview .schedule__slide dt {
+.lower-interview_d .interview .oneday__slide dt {
   font-size: 1.9rem;
   font-weight: bold;
 }
 @media screen and (max-width: 768px) {
-  .lower-interview_d .interview .schedule__slide dt {
+  .lower-interview_d .interview .oneday__slide dt {
     font-size: 1.8rem;
   }
 }
-.lower-interview_d .interview .schedule__slide dd {
+.lower-interview_d .interview .oneday__slide dd {
   font-size: 1.5rem;
   margin-top: 12px;
 }
 @media screen and (max-width: 768px) {
-  .lower-interview_d .interview .schedule__slide dd {
+  .lower-interview_d .interview .oneday__slide dd {
     font-size: 1.4rem;
     margin-top: 8px;
   }
