--- a/sass/layout/_interview.scss
+++ b/sass/layout/_interview.scss
@@ -359,7 +359,7 @@
             );
           }
         }
-        
+
         &__inner {
           display: flex;
           justify-content: flex-start;
@@ -831,7 +831,7 @@
             background-size: 360px 13px;
           }
         }
-        
+
         .question {
           .head {
 
@@ -1038,7 +1038,7 @@
               background-color: #89cce8;
               width: 100%;
               height: 100%;
-              transform: translateX(100%);
+              transform: translate(99%);
               position: absolute;
               top: 0;
               right: 0;
